Fixed margins
The margins messed up somehow and the background was weird so I swtich up the units and now everything looks better.

--- a/css/indexstyles.css
+++ b/css/indexstyles.css
@@ -1,5 +1,6 @@
 body {
     background: whitesmoke;
+    background-size: cover;
     color: black;
     font-family: sans-serif;
     padding: auto;
@@ -8,9 +9,21 @@ body {
 #title{
     font-family: Lato, 'Open Sans';
     font-size: 3rem;
+    /* background-size: cover; */
+    
 }
+
+.projects{
+    display: flex;
+    background: black;
+    /* background-size: cover; */
+    padding: 0.1rem;
+    margin: -1vh -1vw;   
+    justify-content: center;
+}
+
 .aboutme {
-   
+   background-size: auto ;
     color: #30343F;
     margin: 0vh auto;
     font-family: Lato, 'Open sans', Roboto, Helvetica;
@@ -20,8 +33,9 @@ body {
 footer {
     display: flex;
     background-color: black;
+    background-size: auto ;
     justify-content: center;
-    margin: 3rem -10rem;
+    margin: 5vh -1vw;   
 }
 
 
